Version 0.9.X (2014-XX-XX)
--------------------------
Scala Common Enrich: stored etl_tstamp in new field in CanonicalOutput (#818)
Redshift: bumped table-def to 0.4.0
Redshift: added etl_tstamp to atomic.events (#819)
Redshift: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#834)
Postgres: bumped table-def to 0.3.0
Postgres: added etl_tstamp to atomic.events (#820)
Postgres: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#833)

Version 0.9.5 (2014-07-09)
--------------------------
Ruby Tracker: added git submodule. Version 0.1.0 (#645)
Java Tracker: added git submodule. Version 0.2.0 (#843)
JavaScript Tracker: bumped git submodule to 2.0.0 (#635)
Python Tracker: bumped Python Tracker git submodule to 0.4.0 (#634)
Scala Hadoop Shred: added. Version 0.1.0
EmrEtlRunner: bumped to 0.8.0
EmrEtlRunner: updated S3DistCp steps to use new S3DistCpStep from Elasticity (#629)
EmrEtlRunner: added --skip s3distcp option (#313)
EmrEtlRunner: added ability to start Lingual in EmrEtlRunner (#623)
EmrEtlRunner: added ability to start HBase in EmrEtlRunner (#622)
EmrEtlRunner: improved load performance by switching ETL to write out to HDFS (#278)
EmrEtlRunner: now invoking Scala Hadoop Shredder after main job (#644)
EmrEtlRunner: added :iglu: section to config.yml for Scala Hadoop Shred (#814)
EmrEtlRunner: updated to run Scala Hadoop Shred following Hadoop Enrich (#815)
EmrEtlRunner: added --skip shred option (#659)
StorageLoader: bumped to 0.3.0
StorageLoader: bumped Sluice to 0.2.1 (#881) 
StorageLoader: added initial Ruby.contracts support (#391)
StorageLoader: updated config.yml to support shredding (#897)
StorageLoader: added ACCEPTINVCHARS to StorageLoader (#411)
StorageLoader: wrote JSON Path files for ad_* events (#642)
StorageLoader: wrote JSON Path file for link_click (#599)
StorageLoader: wrote JSON Path file for screen_view (#643)
StorageLoader: wrote JSON Path file for schema.org's WebPage (#772)